Add meta element description and keywords to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Discover mouthwatering Paulista dishes and traditional recipes from Sao Paulo, Brazil. Explore a rich culinary heritage with our curated collection of flavorful recipes, featuring iconic dishes that capture the essence of Sao Paulo's gastronomy. From feijoada to coxinha, indulge in the vibrant flavors and cultural diversity that make Paulista cuisine so unique. Get ready to embark on a culinary adventure through the tantalizing tastes of Sao Paulo.">
+    <meta name="keywords"
+        content="Paulista dishes, Sao Paulo recipes, Brazilian cuisine, traditional recipes, Paulista food, Sao Paulo gastronomy, feijoada, coxinha, Brazilian snacks, favorite dishes, Sao Paulo flavors, culinary heritage, food culture">
     <title>Paulista Dishes</title>
 </head>
 
