Add header to index.html with the initial shape structure

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+    <header>
+        <img src="./assets/images/icon.png" alt="website's icon, Sao Paulo's city shape in black">
+    </header>
 
 </body>
 
