Adjust header position for better visual display

--- a/index.html
+++ b/index.html
@@ -8,13 +8,32 @@
         content="Discover mouthwatering Paulista dishes and traditional recipes from Sao Paulo, Brazil. Explore a rich culinary heritage with our curated collection of flavorful recipes, featuring iconic dishes that capture the essence of Sao Paulo's gastronomy. From feijoada to coxinha, indulge in the vibrant flavors and cultural diversity that make Paulista cuisine so unique. Get ready to embark on a culinary adventure through the tantalizing tastes of Sao Paulo.">
     <meta name="keywords"
         content="Paulista dishes, Sao Paulo recipes, Brazilian cuisine, traditional recipes, Paulista food, Sao Paulo gastronomy, feijoada, coxinha, Brazilian snacks, favorite dishes, Sao Paulo flavors, culinary heritage, food culture">
+
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Paulista Dishes</title>
 </head>
 
 <body>
     <header>
-        <img src="./assets/images/icon.png" alt="website's icon, Sao Paulo's city shape in black">
+        <div class="headericon">
+            <a href="index.html">
+                <img src="./assets/images/icon.png" alt="website's icon, Sao Paulo's city shape in black">
+                <h1>Paulista Dishes</h1>
+            </a>
+        </div>
+        <nav class="headernav">
+            <ul>
+                <li><a href="#">Foods</a></li>
+                <li><a href="#">Drinks</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </header>
+    <section>
+        <div>
+
+        </div>
+    </section>
 
 </body>
 
