Add style for the div class topmain and topmain-text

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
     </header>
     <section>
         <div class="topmain">
-
+            <div id="topmain-text">
+                <h2>Discover São Paulo, the vibrant metropolis renowned for its rich culinary heritage and iconic
+                    dishes.</h2>
+            </div>
         </div>
     </section>
 
