Rework on the CSS for all elements class, HTML better structure for CSS class, header with display: flex instead display inline-block

--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
 </head>
 
 <body>
-    <header>
-        <div class="headericon">
-            <a href="index.html">
-                <img src="./assets/images/icon.png" alt="website's icon, Sao Paulo's city shape in black">
-                <h1>Paulista Dishes</h1>
+    <header class="header">
+        <div class="header__logo">
+            <a href="index.html" class="header__link">
+                <img class="header__image" src="./assets/images/icon.png"
+                    alt="website's icon, Sao Paulo's city shape in black">
+                <h1 class="header__title">Paulista Dishes</h1>
             </a>
         </div>
-        <nav class="headernav">
-            <ul>
-                <li><a href="#">Foods</a></li>
-                <li><a href="#">Drinks</a></li>
-                <li><a href="#">Contact</a></li>
+        <nav class="header__menu">
+            <ul class="header__items">
+                <li class="header__item"><a href="#" class="header__link">Foods</a></li>
+                <li class="header__item"><a href="#" class="header__link">Drinks</a></li>
+                <li class="header__item"><a href="#" class="header__link">Contact</a></li>
             </ul>
         </nav>
     </header>
