Rework index.html class section__top and it's childs, CSS aplied with display:flex for section__image-div, so that the section__text-div fit at the end or middle for responsive

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <div class="topmain">
-            <div id="topmain-text">
+    <section class="section__top">
+        <div class="section__image-div">
+            <div class="section__text-div">
                 <h2>Discover São Paulo, the vibrant metropolis renowned for its rich culinary heritage and iconic
                     dishes.</h2>
             </div>
