Add text to about section and style it with simple margin and position rules

--- a/index.html
+++ b/index.html
@@ -24,18 +24,53 @@
         </div>
         <nav class="header__menu">
             <ul class="header__items">
-                <li class="header__item"><a href="#" class="header__link">Foods</a></li>
+                <li class="header__item"><a href="#" aria- class="header__link">Foods</a></li>
                 <li class="header__item"><a href="#" class="header__link">Drinks</a></li>
                 <li class="header__item"><a href="#" class="header__link">Contact</a></li>
             </ul>
         </nav>
     </header>
     <section class="section__top">
-        <div class="section__image-div">
-            <div class="section__text-div">
-                <h2>Discover São Paulo, the vibrant metropolis renowned for its rich culinary heritage and iconic
+        <div class="section__dish-image">
+            <div class="section__background">
+                <h2 class="section_text">Discover São Paulo, the vibrant metropolis renowned for its rich culinary
+                    heritage and iconic
                     dishes.</h2>
             </div>
+        </div>
+    </section>
+    <section class="section__about">
+        <div class="section__content">
+            <article class="section__article">
+                <h1 class="section__title">About Paulista Dishes</h1>
+                <p class="section__paragraph">Welcome to Paulista Dishes, the ultimate destination for food and drink
+                    enthusiasts! Our website is
+                    dedicated to bringing you the most delightful and authentic recipes, as well as handpicked
+                    recommendations for restaurants.</p>
+                <p class="section__paragraph">We pride ourselves on curating content based on the extensive experience
+                    of our knowledgeable
+                    authors.</p>
+                <p class="section__paragraph">Explore a culinary journey through the vibrant and diverse world of
+                    Sao Paulo cuisine. Whether you're
+                    craving traditional Brazilian delicacies, innovative fusion dishes, or refreshing beverages, we've
+                    got you covered.</p>
+                <p class="section__paragraph">Our carefully crafted recipes are a testament to the rich flavors and
+                    cultural heritage of the
+                    Sao Paulo region.</p>
+                <p class="section__paragraph">Not only do we provide mouthwatering recipes, but we also go the extra
+                    mile by sharing insights into
+                    the best restaurants in the area. Our authors have personally savored the culinary delights of
+                    numerous establishments, handpicking the finest dining experiences for your enjoyment.</p>
+                <p class="section__paragraph">From cozy family-owned gems to trendy hotspots, we aim to cater to all
+                    tastes and preferences.</p>
+                <p class="section__paragraph">So, whether you're an adventurous home cook eager to recreate authentic
+                    Sao Paulo flavors or a food
+                    lover looking for the perfect restaurant to indulge in a memorable dining experience, Paulista
+                    Dishes is your trusted companion.</p>
+                <p class="section__paragraph">Join us on this gastronomic adventure and savor the very best that
+                    Sao Paulo cuisine has to offer!</p>
+            </article>
+
         </div>
     </section>
 
