--- a/index.html
+++ b/index.html
@@ -33,45 +33,59 @@
     <section class="section__top">
         <div class="section__dish-image">
             <div class="section__background">
-                <h2 class="section_text">Discover São Paulo, the vibrant metropolis renowned for its rich culinary
+                <h2 class="section__banner">Discover São Paulo, the vibrant metropolis renowned for its rich culinary
                     heritage and iconic
                     dishes.</h2>
             </div>
         </div>
     </section>
-    <section class="section__about">
+    <section class="section">
         <div class="section__content">
             <article class="section__article">
-                <h1 class="section__title">About Paulista Dishes</h1>
-                <p class="section__paragraph">Welcome to Paulista Dishes, the ultimate destination for food and drink
-                    enthusiasts! Our website is
-                    dedicated to bringing you the most delightful and authentic recipes, as well as handpicked
-                    recommendations for restaurants.</p>
-                <p class="section__paragraph">We pride ourselves on curating content based on the extensive experience
-                    of our knowledgeable
-                    authors.</p>
-                <p class="section__paragraph">Explore a culinary journey through the vibrant and diverse world of
-                    Sao Paulo cuisine. Whether you're
-                    craving traditional Brazilian delicacies, innovative fusion dishes, or refreshing beverages, we've
-                    got you covered.</p>
-                <p class="section__paragraph">Our carefully crafted recipes are a testament to the rich flavors and
-                    cultural heritage of the
-                    Sao Paulo region.</p>
-                <p class="section__paragraph">Not only do we provide mouthwatering recipes, but we also go the extra
-                    mile by sharing insights into
-                    the best restaurants in the area. Our authors have personally savored the culinary delights of
-                    numerous establishments, handpicking the finest dining experiences for your enjoyment.</p>
-                <p class="section__paragraph">From cozy family-owned gems to trendy hotspots, we aim to cater to all
-                    tastes and preferences.</p>
-                <p class="section__paragraph">So, whether you're an adventurous home cook eager to recreate authentic
-                    Sao Paulo flavors or a food
-                    lover looking for the perfect restaurant to indulge in a memorable dining experience, Paulista
-                    Dishes is your trusted companion.</p>
-                <p class="section__paragraph">Join us on this gastronomic adventure and savor the very best that
-                    Sao Paulo cuisine has to offer!</p>
+                <h2 class="section__title">About Paulista Dishes</h1>
+                    <p class="section__paragraph">Welcome to Paulista Dishes, the ultimate destination for food and
+                        drink
+                        enthusiasts! Our website is
+                        dedicated to bringing you the most delightful and authentic recipes, as well as handpicked
+                        recommendations for restaurants.</p>
+                    <p class="section__paragraph">We pride ourselves on curating content based on the extensive
+                        experience
+                        of our knowledgeable
+                        authors.</p>
+                    <p class="section__paragraph">Explore a culinary journey through the vibrant and diverse world of
+                        Sao Paulo cuisine. Whether you're
+                        craving traditional Brazilian delicacies, innovative fusion dishes, or refreshing beverages,
+                        we've
+                        got you covered.</p>
+                    <p class="section__paragraph">Our carefully crafted recipes are a testament to the rich flavors and
+                        cultural heritage of the
+                        Sao Paulo region.</p>
+                    <p class="section__paragraph">Not only do we provide mouthwatering recipes, but we also go the extra
+                        mile by sharing insights into
+                        the best restaurants in the area. Our authors have personally savored the culinary delights of
+                        numerous establishments, handpicking the finest dining experiences for your enjoyment.</p>
+                    <p class="section__paragraph">From cozy family-owned gems to trendy hotspots, we aim to cater to all
+                        tastes and preferences.</p>
+                    <p class="section__paragraph">So, whether you're an adventurous home cook eager to recreate
+                        authentic
+                        Sao Paulo flavors or a food
+                        lover looking for the perfect restaurant to indulge in a memorable dining experience, Paulista
+                        Dishes is your trusted companion.</p>
+                    <p class="section__paragraph">Join us on this gastronomic adventure and savor the very best that
+                        Sao Paulo cuisine has to offer!</p>
             </article>
 
         </div>
+    </section>
+    <section class="section">
+        <h2 class="section__title">Top Foods</h2>
+        <ul class="section__foods">
+            <li class="section__food section__food--coxinha">Coxinha</li>
+            <li class="section__food">Feijoada</li>
+            <li class="section__food">Pastel</li>
+            <li class="section__food">Virado a Paulista</li>
+        </ul>
+
     </section>
 
 </body>
