Rename the top-foods section of HTML class to introduction, based on BEM CSS, fixed style.css to match new class

--- a/index.html
+++ b/index.html
@@ -30,48 +30,48 @@
             </ul>
         </nav>
     </header>
-    <section class="section__top">
-        <div class="section__dish-image">
-            <div class="section__background">
-                <h2 class="section__banner">Discover São Paulo, the vibrant metropolis renowned for its rich culinary
+    <section class="introduction">
+        <div class="introduction__image">
+            <div class="introduction__subtitle">
+                <h2 class="introduction__text">Discover São Paulo, the vibrant metropolis renowned for its rich culinary
                     heritage and iconic
                     dishes.</h2>
             </div>
         </div>
     </section>
-    <section class="section">
-        <div class="section__content">
-            <article class="section__article">
-                <h2 class="section__title">About Paulista Dishes</h1>
-                    <p class="section__paragraph">Welcome to Paulista Dishes, the ultimate destination for food and
+    <section class="about">
+        <div class="about__box">
+            <article class="about__article">
+                <h2 class="about__title">About Paulista Dishes</h1>
+                    <p class="about__paragraph">Welcome to Paulista Dishes, the ultimate destination for food and
                         drink
                         enthusiasts! Our website is
                         dedicated to bringing you the most delightful and authentic recipes, as well as handpicked
                         recommendations for restaurants.</p>
-                    <p class="section__paragraph">We pride ourselves on curating content based on the extensive
+                    <p class="about__paragraph">We pride ourselves on curating content based on the extensive
                         experience
                         of our knowledgeable
                         authors.</p>
-                    <p class="section__paragraph">Explore a culinary journey through the vibrant and diverse world of
+                    <p class="about__paragraph">Explore a culinary journey through the vibrant and diverse world of
                         Sao Paulo cuisine. Whether you're
                         craving traditional Brazilian delicacies, innovative fusion dishes, or refreshing beverages,
                         we've
                         got you covered.</p>
-                    <p class="section__paragraph">Our carefully crafted recipes are a testament to the rich flavors and
+                    <p class="about__paragraph">Our carefully crafted recipes are a testament to the rich flavors and
                         cultural heritage of the
                         Sao Paulo region.</p>
-                    <p class="section__paragraph">Not only do we provide mouthwatering recipes, but we also go the extra
+                    <p class="about__paragraph">Not only do we provide mouthwatering recipes, but we also go the extra
                         mile by sharing insights into
                         the best restaurants in the area. Our authors have personally savored the culinary delights of
                         numerous establishments, handpicking the finest dining experiences for your enjoyment.</p>
-                    <p class="section__paragraph">From cozy family-owned gems to trendy hotspots, we aim to cater to all
+                    <p class="about__paragraph">From cozy family-owned gems to trendy hotspots, we aim to cater to all
                         tastes and preferences.</p>
-                    <p class="section__paragraph">So, whether you're an adventurous home cook eager to recreate
+                    <p class="about__paragraph">So, whether you're an adventurous home cook eager to recreate
                         authentic
                         Sao Paulo flavors or a food
                         lover looking for the perfect restaurant to indulge in a memorable dining experience, Paulista
                         Dishes is your trusted companion.</p>
-                    <p class="section__paragraph">Join us on this gastronomic adventure and savor the very best that
+                    <p class="about__paragraph">Join us on this gastronomic adventure and savor the very best that
                         Sao Paulo cuisine has to offer!</p>
             </article>
 
