--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 
         </div>
     </section>
-    <section class="section">
-        <h2 class="section__title">Top Foods</h2>
-        <ul class="section__foods">
-            <li class="section__food section__food--coxinha">Coxinha</li>
-            <li class="section__food">Feijoada</li>
-            <li class="section__food">Pastel</li>
-            <li class="section__food">Virado a Paulista</li>
+    <section class="top-foods">
+        <h2 class="top-foods__title">Top Foods</h2>
+        <ul class="top-foods__items">
+            <li class="top-foods__item">Coxinha</li>
+            <li class="top-foods__item">Feijoada</li>
+            <li class="top-foods__item">Pastel</li>
+            <li class="top-foods__item">Virado a Paulista</li>
         </ul>
 
     </section>
