--- a/index.html
+++ b/index.html
@@ -80,10 +80,12 @@
     <section class="top-foods">
         <h2 class="top-foods__title">Top Foods</h2>
         <ul class="top-foods__items">
-            <li class="top-foods__item">Coxinha</li>
-            <li class="top-foods__item">Feijoada</li>
-            <li class="top-foods__item">Pastel</li>
-            <li class="top-foods__item">Virado a Paulista</li>
+            <li class="top-foods__item">
+                <figure class="top-foods__figure">
+                    <img src="./assets/images/coxinha.jpg" alt="A coxinha on a chopping board" class="top-foods__photo">
+                    <figcaption class="top-foods__subtitle">Coxinha</figcaption>
+                </figure>
+            </li>
         </ul>
 
     </section>
