Visual layout change, new colors assigned

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </div>
         <nav class="header__menu">
             <ul class="header__items">
-                <li class="header__item"><a href="#" aria- class="header__link">Foods</a></li>
-                <li class="header__item"><a href="#" class="header__link">Drinks</a></li>
-                <li class="header__item"><a href="#" class="header__link">Contact</a></li>
+                <li class="header__item header__item--selected"><a href="#" aria- class="header__link">Home</a></li>
+                <li class="header__item"><a href="#" class="header__link">Recipes</a></li>
+                <li class="header__item header__item--last"><a href="#" class="header__link">Contact</a></li>
             </ul>
         </nav>
     </header>
