--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <div class="header__logo">
-            <a href="index.html" class="header__link">
+            <a href="index.html" class="header__home">
                 <img class="header__image" src="./assets/images/icon.png"
                     alt="website's icon, Sao Paulo's city shape in black">
                 <h1 class="header__title">Paulista Dishes</h1>
@@ -24,7 +24,7 @@
         </div>
         <nav class="header__menu">
             <ul class="header__items">
-                <li class="header__item header__item--selected"><a href="#" aria- class="header__link">Home</a></li>
+                <li class="header__item"><a href="#" aria- class="header__link header__item--selected">Home</a></li>
                 <li class="header__item"><a href="#" class="header__link">Recipes</a></li>
                 <li class="header__item header__item--last"><a href="#" class="header__link">Contact</a></li>
             </ul>
