--- a/index.html
+++ b/index.html
@@ -123,6 +123,29 @@
 
     </section>
 
+    <footer class="footer">
+        <ul class="footer__social-medias">
+            <li class="footer__social-media">
+                <a href="https://facebook.com" class="footer__link" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li class="footer__social-media">
+                <a href="https://twitter.com" class="footer__link" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
+            </li>
+            <li class="footer__social-media">
+                <a href="https://youtube.com" class="footer__link" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
+            </li>
+            <li class="footer__social-media">
+                <a href="https://instagram.com" class="footer__link" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
+
+    <!-- font awesome script  -->
+    <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
