Fix for W3 validator on HTML elemets, it still require more fixes after this commit

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <nav class="header__menu">
             <ul class="header__items">
-                <li class="header__item"><a href="#" aria- class="header__link header__item--selected">Home</a></li>
+                <li class="header__item"><a href="#" class="header__link header__item--selected">Home</a></li>
                 <li class="header__item"><a href="#" class="header__link">Recipes</a></li>
                 <li class="header__item header__item--last"><a href="#" class="header__link">Contact</a></li>
             </ul>
@@ -42,37 +42,37 @@
     <section class="about">
         <div class="about__box">
             <article class="about__article">
-                <h2 class="about__title">About Paulista Dishes</h1>
-                    <p class="about__paragraph">Welcome to Paulista Dishes, the ultimate destination for food and
-                        drink
-                        enthusiasts! Our website is
-                        dedicated to bringing you the most delightful and authentic recipes, as well as handpicked
-                        recommendations for restaurants.</p>
-                    <p class="about__paragraph">We pride ourselves on curating content based on the extensive
-                        experience
-                        of our knowledgeable
-                        authors.</p>
-                    <p class="about__paragraph">Explore a culinary journey through the vibrant and diverse world of
-                        Sao Paulo cuisine. Whether you're
-                        craving traditional Brazilian delicacies, innovative fusion dishes, or refreshing beverages,
-                        we've
-                        got you covered.</p>
-                    <p class="about__paragraph">Our carefully crafted recipes are a testament to the rich flavors and
-                        cultural heritage of the
-                        Sao Paulo region.</p>
-                    <p class="about__paragraph">Not only do we provide mouthwatering recipes, but we also go the extra
-                        mile by sharing insights into
-                        the best restaurants in the area. Our authors have personally savored the culinary delights of
-                        numerous establishments, handpicking the finest dining experiences for your enjoyment.</p>
-                    <p class="about__paragraph">From cozy family-owned gems to trendy hotspots, we aim to cater to all
-                        tastes and preferences.</p>
-                    <p class="about__paragraph">So, whether you're an adventurous home cook eager to recreate
-                        authentic
-                        Sao Paulo flavors or a food
-                        lover looking for the perfect restaurant to indulge in a memorable dining experience, Paulista
-                        Dishes is your trusted companion.</p>
-                    <p class="about__paragraph">Join us on this gastronomic adventure and savor the very best that
-                        Sao Paulo cuisine has to offer!</p>
+                <h2 class="about__title">About Paulista Dishes</h2>
+                <p class="about__paragraph">Welcome to Paulista Dishes, the ultimate destination for food and
+                    drink
+                    enthusiasts! Our website is
+                    dedicated to bringing you the most delightful and authentic recipes, as well as handpicked
+                    recommendations for restaurants.</p>
+                <p class="about__paragraph">We pride ourselves on curating content based on the extensive
+                    experience
+                    of our knowledgeable
+                    authors.</p>
+                <p class="about__paragraph">Explore a culinary journey through the vibrant and diverse world of
+                    Sao Paulo cuisine. Whether you're
+                    craving traditional Brazilian delicacies, innovative fusion dishes, or refreshing beverages,
+                    we've
+                    got you covered.</p>
+                <p class="about__paragraph">Our carefully crafted recipes are a testament to the rich flavors and
+                    cultural heritage of the
+                    Sao Paulo region.</p>
+                <p class="about__paragraph">Not only do we provide mouthwatering recipes, but we also go the extra
+                    mile by sharing insights into
+                    the best restaurants in the area. Our authors have personally savored the culinary delights of
+                    numerous establishments, handpicking the finest dining experiences for your enjoyment.</p>
+                <p class="about__paragraph">From cozy family-owned gems to trendy hotspots, we aim to cater to all
+                    tastes and preferences.</p>
+                <p class="about__paragraph">So, whether you're an adventurous home cook eager to recreate
+                    authentic
+                    Sao Paulo flavors or a food
+                    lover looking for the perfect restaurant to indulge in a memorable dining experience, Paulista
+                    Dishes is your trusted companion.</p>
+                <p class="about__paragraph">Join us on this gastronomic adventure and savor the very best that
+                    Sao Paulo cuisine has to offer!</p>
             </article>
 
         </div>
@@ -82,7 +82,7 @@
         <ul class="top-foods__items">
             <li class="top-foods__item">
                 <figure class="top-foods__figure">
-                    <a href="http://">
+                    <a href="#">
                         <img src="./assets/images/coxinha.jpg" alt="A coxinha on a chopping board"
                             class="top-foods__photo">
                         <figcaption class="top-foods__subtitle">Coxinha</figcaption>
@@ -91,7 +91,7 @@
             </li>
             <li class="top-foods__item">
                 <figure class="top-foods__figure">
-                    <a href="http://">
+                    <a href="#">
                         <img src="./assets/images/feijoada.jpg"
                             alt="A feijoada (bean stew) inside of a bow with a dish with rice at the back"
                             class="top-foods__photo">
@@ -101,7 +101,7 @@
             </li>
             <li class="top-foods__item">
                 <figure class="top-foods__figure">
-                    <a href="http://">
+                    <a href="#">
                         <img src="./assets/images/pastel.jpg"
                             alt="A few pastels in a plate with a sause bow in the midle" class="top-foods__photo">
                         <figcaption class="top-foods__subtitle">Pastel</figcaption>
@@ -110,7 +110,7 @@
             </li>
             <li class="top-foods__item">
                 <figure class="top-foods__figure">
-                    <a href="http://">
+                    <a href="#">
                         <img src="./assets/images/mortadella-sandwich.jpg"
                             alt="A mortadella sandwich on a chopping board with a knife close to it"
                             class="top-foods__photo">
