Fix margin after body and html layout change for display:flex

--- a/index.html
+++ b/index.html
@@ -81,10 +81,13 @@
         <h2 class="top-foods__title">Top Foods</h2>
         <ul class="top-foods__items">
             <li class="top-foods__item">
-                <figure class="top-foods__figure">
-                    <img src="./assets/images/coxinha.jpg" alt="A coxinha on a chopping board" class="top-foods__photo">
-                    <figcaption class="top-foods__subtitle">Coxinha</figcaption>
-                </figure>
+                <a>
+                    <figure class="top-foods__figure">
+                        <img src="./assets/images/coxinha.jpg" alt="A coxinha on a chopping board"
+                            class="top-foods__photo">
+                        <figcaption class="top-foods__subtitle">Coxinha</figcaption>
+                    </figure>
+                </a>
             </li>
             <li class="top-foods__item">
                 <figure class="top-foods__figure">
