--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <h2 class="top-foods__title">Top Foods</h2>
         <ul class="top-foods__items">
             <li class="top-foods__item">
-                <a>
+                <a href="#">
                     <figure class="top-foods__figure">
                         <img src="./assets/images/coxinha.jpg" alt="A coxinha on a chopping board"
                             class="top-foods__photo">
@@ -90,27 +90,33 @@
                 </a>
             </li>
             <li class="top-foods__item">
-                <figure class="top-foods__figure">
-                    <img src="./assets/images/feijoada.jpg"
-                        alt="A feijoada (bean stew) inside of a bow with a dish with rice at the back"
-                        class="top-foods__photo">
-                    <figcaption class="top-foods__subtitle">Feijoada</figcaption>
-                </figure>
+                <a href="#">
+                    <figure class="top-foods__figure">
+                        <img src="./assets/images/feijoada.jpg"
+                            alt="A feijoada (bean stew) inside of a bow with a dish with rice at the back"
+                            class="top-foods__photo">
+                        <figcaption class="top-foods__subtitle">Feijoada</figcaption>
+                    </figure>
+                </a>
             </li>
             <li class="top-foods__item">
-                <figure class="top-foods__figure">
-                    <img src="./assets/images/pastel.jpg" alt="A few pastels in a plate with a sause bow in the midle"
-                        class="top-foods__photo">
-                    <figcaption class="top-foods__subtitle">Pastel</figcaption>
-                </figure>
+                <a href="#">
+                    <figure class="top-foods__figure">
+                        <img src="./assets/images/pastel.jpg"
+                            alt="A few pastels in a plate with a sause bow in the midle" class="top-foods__photo">
+                        <figcaption class="top-foods__subtitle">Pastel</figcaption>
+                    </figure>
+                </a>
             </li>
             <li class="top-foods__item">
-                <figure class="top-foods__figure">
-                    <img src="./assets/images/mortadella-sandwich.jpg"
-                        alt="A mortadella sandwich on a chopping board with a knife close to it"
-                        class="top-foods__photo">
-                    <figcaption class="top-foods__subtitle">Mortadella Sandwich</figcaption>
-                </figure>
+                <a href="#">
+                    <figure class="top-foods__figure">
+                        <img src="./assets/images/mortadella-sandwich.jpg"
+                            alt="A mortadella sandwich on a chopping board with a knife close to it"
+                            class="top-foods__photo">
+                        <figcaption class="top-foods__subtitle">Mortadella Sandwich</figcaption>
+                    </figure>
+                </a>
             </li>
 
         </ul>
