Add <h3> to HTML about__article

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <h2 class="about__title">About Paulista Dishes</h2>
         <div class="about__box">
             <article class="about__article">
+                <h3>Introduction</h3>
                 <p class="about__paragraph">Welcome to Paulista Dishes, the ultimate destination for food and
                     drink
                     enthusiasts! Our website is
