Add recipes.html and style to the first section recipes__box

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="header__menu">
             <ul class="header__items">
                 <li class="header__item"><a href="#" class="header__link header__item--selected">Home</a></li>
-                <li class="header__item"><a href="#" class="header__link">Recipes</a></li>
+                <li class="header__item"><a href="recipes.html" class="header__link">Recipes</a></li>
                 <li class="header__item header__item--last"><a href="#" class="header__link">Contact</a></li>
             </ul>
         </nav>
@@ -43,7 +43,7 @@
         <h2 class="about__title">About Paulista Dishes</h2>
         <div class="about__box">
             <article class="about__article">
-                <h3>Introduction</h3>
+                <h3 class="about__title">Introduction</h3>
                 <p class="about__paragraph">Welcome to Paulista Dishes, the ultimate destination for food and
                     drink
                     enthusiasts! Our website is
