Add recipes__recipe box and style it, not final version, testing colors

--- a/recipes.html
+++ b/recipes.html
@@ -32,25 +32,67 @@
     </header>
 
     <section class="recipes">
-        <div class="recipes__box">
+        <div class="recipes__introduction">
             <h2 class="recipes__title">Top Recipes</h2>
-            <p>Here, you will find an extensive collection of delicious recipes and dishes available on our website.
+            <p class="recipes__text">Here, you will find an extensive collection of delicious recipes and dishes
+                available on our website.
                 Whether
                 you're craving savory meals, mouthwatering desserts, refreshing beverages, or wholesome snacks, we have
                 a
                 wide variety of recipes to suit your culinary preferences.</p>
-            <p>Our recipe database encompasses a range of cuisines, dietary preferences, and cooking styles, ensuring
+            <p class="recipes__text">Our recipe database encompasses a range of cuisines, dietary preferences, and
+                cooking styles, ensuring
                 there's something for everyone. From quick and easy recipes for busy weekdays to elaborate gourmet
                 dishes
                 for special occasions, you'll discover culinary inspiration for every meal of the day.</p>
-            <p>Explore our diverse recipe collection and embark on a delightful culinary journey filled with flavors,
+            <p class="recipes__text">Explore our diverse recipe collection and embark on a delightful culinary journey
+                filled with flavors,
                 aromas, and culinary creativity. Get ready to tantalize your taste buds and impress your loved ones with
                 these tried-and-true recipes. Enjoy the art of cooking and savor the joy of sharing delicious meals with
                 family and friends.</p>
         </div>
+        <div class="recipes__recipe">
+            <h2 class="recipes__title2">Coxinha</h2>
+            <img src="./assets/images/coxinha.jpg" alt="A coxinha on a chopping board" class="recipes__photo">
+            <div class="recipes__ingredients">
+                <h3 class="recipes__titles">Ingredients:</h3>
+                <ul>
+                    <li>2 cups shredded cooked chicken</li>
+                    <li>1 tablespoon vegetable oil</li>
+                    <li>1 small onion, finely chopped</li>
+                    <li>2 cloves garlic, minced</li>
+                    <li>2 cups chicken broth</li>
+                    <li>2 cups all-purpose flour</li>
+                    <li>2 cups bread crumbs</li>
+                    <li>3 eggs, beaten</li>
+                    <li>Salt and pepper to taste</li>
+                    <li>Oil for frying</li>
+                </ul>
+            </div>
+            <div class="recipes__instructions">
+                <h3 class="recipes__titles">Instructions:</h3>
+                <ol>
+                    <li>In a pan, heat the vegetable oil and sauté the onion and garlic until translucent.</li>
+                    <li>Add the shredded chicken and season with salt and pepper. Mix well.</li>
+                    <li>Pour in the chicken broth and bring it to a boil.</li>
+                    <li>Gradually add the all-purpose flour while stirring continuously until the mixture forms a dough.
+                    </li>
+                    <li>Transfer the dough to a clean surface and let it cool slightly.</li>
+                    <li>Take a small portion of the dough and flatten it in your palm.</li>
+                    <li>Place a spoonful of the chicken filling in the center of the dough.</li>
+                    <li>Fold the dough over the filling, shaping it into a teardrop or drumstick shape.</li>
+                    <li>Dip each coxinha in beaten eggs, then roll them in bread crumbs until coated.</li>
+                    <li>In a deep fryer or pot, heat oil to 350°F (175°C) and fry the coxinhas until golden brown.</li>
+                    <li>Remove from the oil and drain on a paper towel.</li>
+                    <li>Serve hot and enjoy!</li>
+                </ol>
+            </div>
+        </div>
+        </div>
 
 
     </section>
+
 
     <footer class="footer">
         <ul class="footer__social-medias">
